# MiniAgent

./: .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  PRODUCT.md  README.md  main.py  pyproject.toml  设计prompt.md
docs/: architecture.md
docs/agents/: domain.md
docs/design-docs/: context-management.md  hook-registry-and-lifecycle.md  main-loop.md  openai-compatible-model-provider.md  overall-architecture.md  persistence-and-observability.md  textual-ui.md  tool-design-guidelines.md  tool-registry-and-execution.md
docs/reference/: agent-prompt-conversation-summarization.md
docs/references/: coomi-ui-architecture-research.md
miniagent/: __init__.py  context.py  documents.py  domain.py  events.py  journal.py  loop.py  ports.py  repository.py  session.py  storage.py  text_processing.py  todos.py  trace.py  updates.py
miniagent/hooks/: __init__.py  builtin.py  dispatcher.py  models.py  registry.py
miniagent/provider/: __init__.py  config.py  errors.py  events.py  openai.py
miniagent/tools/: __init__.py  artifacts.py  authorization.py  config.py  executor.py  grep.py  models.py  policy.py  registry.py  schema.py  validation.py
miniagent/ui/: __init__.py  __main__.py  app.py  commands.py  composer.py  layout_index.py  miniagent.tcss  projection.py  render_cache.py  runtime.py  screen.py  session_facade.py  status_bar.py  theme.py  viewport.py
tests/: test_context_management.py  test_documents.py  test_domain_context.py  test_loop.py  test_session.py
tests/fixtures/: demo_grep.txt
tests/hooks/: test_dispatcher.py  test_model_lifecycle.py  test_registry.py  (+1 more)
(+88 files in other folders)
