[project]
name = "miniagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2,<3",
    "python-dotenv>=1.1.1",
    "textual>=0.86,<1",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
